--- a/style.css
+++ b/style.css
@@ -5,10 +5,13 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 30px;
+}
 .oran{
     color: orange;
 }
-section{
+.flax-jibal{
     display: flex;
 }
 .half-width{
@@ -36,4 +39,26 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-item{
+    width: 50%;
+    padding-left: 5%;
+    box-shadow: 10px 10px 40px gray;
+    margin: 4%;
+    
+}
+.one{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+#merge{
+    border-left: 7px solid blue;
+}
+#boder{
+    border-left: 7px solid tomato;
+}
+footer{
+    text-align: center;
 }
